--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>NYT</title>
 </head>
 
@@ -52,20 +53,22 @@
         </div>
         <div class="form-group4">
             <label for="numRecords">End Year (Optional): </label>
-            <input type="text" class="form-control" id="startRecords" placeholder=" ">
+            <input type="text" class="form-control" id="endRecords" placeholder=" ">
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button id="getArticles" class="btn btn-primary">Search</button>
         <button type="submit" class="btn btn-primary">Clear Results</button>
 
     </form>
     <br>
 
     <div class = "article-container"></div>
-        <div id= "articles">Top Articles</div>
+        <div id= "articles-title">Top Articles</div>
+        <div id= "articles"></div>
 
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/nyt.js"></script>
+   
 
 
 </body>
